--- a/twoge/docker-compose.yml
+++ b/twoge/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
+
 services:
-  app:
+  frontend:
     container_name: 'twoge'
     build: .
     ports:
@@ -8,8 +9,10 @@ services:
     environment:
       - SQLALCHEMY_DATABASE_URI=postgresql://twoge:twoge@twoge-db:5432/twoge
     depends_on:
-      - db
-  db:
+      database:
+        condition: service_healthy
+
+  database:
     image: 'postgres'
     container_name: 'twoge-db'
     ports:
@@ -18,3 +21,7 @@ services:
       - POSTGRES_USER=twoge
       - POSTGRES_PASSWORD=twoge
       - POSTGRES_DB=twoge
+    healthcheck:
+      test: ['CMD', 'pg_isready', '-q', '-d', 'movie_database', '-U', 'steve']
+      timeout: 20s
+      retries: 10
