--- a/todolist-flask/nginx.conf
+++ b/todolist-flask/nginx.conf
@@ -1,13 +1,13 @@
 server {
     listen 80;
+    root /usr/share/nginx/html; # Serve content from this directory
 
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html; # Serve index.html for root URL
     }
 
     location /api {
-        proxy_pass http://backend:80;
+        proxy_pass http://backend:80/; # Proxy requests to the Flask app
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
